Thu Jan  9 12:33:13 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/DAnCE.doxygen:
          Upgraded to doxygen 1.8.6

Thu Jan  9 10:26:55 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Prepare for next release

Thu Jan 09 09:18:31 CET 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE version 1.2.4 released.

Wed Dec 18 14:22:27 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/DAnCE.doxygen:
          Upgraded to doxygen 1.8.5

Sun Dec  8 18:30:30 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
        * docs/schema/Basic_Deployment_Data.xsd:
        * tools/Config_Handlers/Basic_Deployment_Data.hpp:
        * tools/Config_Handlers/Basic_Deployment_Data.cpp:
        * tools/Config_Handlers/DataType_Handler.cpp:
        * tools/Config_Handlers/DynAny_Handler/DynAny_Handler.cpp:
        * tools/Config_Handlers/DynAny_Handler/DynAny_Handler.mpc:
        * tools/Config_Handlers/DynAny_Handler/DynString_Handler.h:
        * tools/Config_Handlers/DynAny_Handler/DynString_Handler.cpp:
          Corrected handling of bounded strings, the bound has to be in the
          cdp and specified as below, the boundedString element with a bound
          must be there
          <type>
            <kind>tk_string</kind>
            <boundedString>
              <bound>50</bound>
            </boundedString>
          </type>

Mon Dec  2 10:13:05 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * VERSION:
          Updated the URL to point to Vandy not WUSTl.

Mon Nov 11 09:43:07 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Prepare for next release

        * dance/NodeApplication/NodeApplication_Impl.cpp:
          Catch exceptions as const

Mon Nov 11 09:17:34 CET 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE version 1.2.3 released.

Wed Oct 23 08:45:46 UTC 2013  Marijke Hengstmengel  <MHengstmengel.remedy.nl>
